# c-20-examples

./: .gitignore  CMakeLists.txt  README.md  minimalExample.cpp
concepts/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp
lambda-expression/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp
ranges/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp
